# Non-Reality-Engine

./: .gitmodules  CMakeLists.txt  Non Reality Engine.cpp  Non Reality Engine.h  README.md  main.cpp
Engine/: testComp.h
Engine/ECS/: Component.h  ComponentRegistry.h  ECS.h  ECSDefinitions.h  ECSDesign.txt  Entity.cpp  Entity.h  Registry.cpp  Registry.h
engine/: BaseGameLoop.cpp  BaseGameLoop.h  GameLoop.h  main.cpp
engine/ObjectStructure/: Component.h  DataComponent.h  GameObject.cpp  GameObject.h  InputComponent.h  PhysicsComponent.h  RenderComponent.h  TransformComponent.h  UpdateComponent.h
engine/ObjectStructure/DefaultComponents/: ControllerComponent.cpp  ControllerComponent.h  PlayerMoveComponent.cpp  PlayerMoveComponent.h  TransformComponent.cpp  TransformComponent.h
engine/Physics/: PortalSurfaceCollider.cpp  PortalSurfaceCollider.h
engine/Rendering/: MeshComponent.cpp  MeshComponent.h  ObliqueView.cpp  ObliqueView.h  Renderer.cpp  Renderer.h
engine/Rendering/Components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  PlayerCameraComponent.cpp  PlayerCameraComponent.h
engine/Rendering/Components/Portal/: PortalCameraComponent.cpp  PortalCameraComponent.h  PortalComponent.cpp  PortalComponent.h  PortalDrawComponent.cpp  PortalDrawComponent.h  PortalEndComponent.cpp  PortalEndComponent.h  PortalInternalsComponent.cpp  PortalInternalsComponent.h
engine/Rendering/shaders/: renderPortalPixel.hlsl  renderPortalVertex.hlsl  renderScreenPixel.hlsl  renderScreenVertex.hlsl
engine/ResourceManager/: MeshLoader.cpp  MeshLoader.h  ShaderManager.cpp  ShaderManager.h  TextureLoader.cpp  TextureLoader.h
engine/SceneManagement/: GameObjectAllocator.cpp  GameObjectAllocator.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h
